# LAJIVM

./: CMakeLists.txt  LAJIVM.sln  README.md  TODOLIST.txt  bin1  bin3  bin4  build_test.sh  二进制文件模板.txt  指令操作.txt
LAJIVM/: BinType.h  CMakeLists.txt  ErrorList.h  ExecuteInstruction.cpp  ExecuteInstruction.h  JITexec.cpp  JITexec.h  LAJIVM.cpp  LAJIVM.vcxproj  LAJIVM.vcxproj.filters  LenInstruction.cpp  MemoryManage.cpp  MemoryManage.h  ModuleManage.cpp  ModuleManage.h  VmRegister.h  base64.cpp  bin_read.cpp  bin_read.h  build_static.sh  init.cpp  init.h  ins_stack.cpp  lvm_debug.cpp
LAJIVM/headers/: BinType.h  ErrorList.h  ExecuteInstruction.h  LenInstruction.h  VmRegister.h  base64.h  bin_read.h  init.h
LAJIVM/staticExport/: staticExport.cpp  staticExport.h
LJasm/: AnalyseCode.cpp  AnalyseCode.h  CMakeLists.txt  JITcomp.cpp  JITcomp.h  LJasm.cpp  LJasm.h  LJasm.vcxproj  LJasm.vcxproj.filters  base64.cpp  hello  hello.ljasm  labelstruct.cpp  labelstruct.h  test  test.jit  test.ljasm
docs/: 二进制文件模板.txt
staic_lib_test/: CMakeLists.txt  build_and_test.sh
staic_lib_test/src/: test.cpp  test.py
test/: bin  bin3  printascii  printascii.ljasm
