cmake_minimum_required(VERSION 3.17)
aux_source_directory(. src)
if(FLAG_STATIC STREQUAL "TRUE")
project(TAG_STATIC)
set(CMAKE_CXX_STANDARD 14)
add_library(link_obj OBJECT ${src})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${OUT_DIR}/lib)
add_library(lajivm_static STATIC $<TARGET_OBJECTS:link_obj> staticExport/staticExport.h staticExport/staticExport.cpp)
#复制头文件到目标文件夹
file(COPY headers DESTINATION "${OUT_DIR}")
file(COPY staticExport/staticExport.h DESTINATION "${OUT_DIR}/staticExport")
else()
add_executable(lajivm ${src})
endif()